# JFrame

./: .gitignore  CMakeLists.txt  README.md
src/Helper/: JsonHelper.cpp  build.sh  main  main.cpp
src/Proto/: proto_out.sh
src/Proto/proto_out/: test.pb.h
src/SourceCode/CommonLib/: Logger.h  block_queue.h  lock.h
src/SourceCode/CommonServer/: CommonServer.cpp  CommonServer.h
src/SourceCode/GateServer/: GateServer.cpp  GateServer.h
src/Tool/: Epoll.cpp  Epoll.h
src/lib/log/: log.h
src/lib/logger/: log.h
src/lib/net/: NetService.cpp  NetService.h
src/lib/net/connection/: CSConnection.h  ConnectionPool.cpp  ConnectionPool.h  IConnectionContext.h  INetConnection.cpp  INetConnection.h  SSConnection.h
src/lib/net/define/: NetDefine.h  err.h
src/lib/net/epoll/: epoll.h
src/lib/net/manager/: NetMessageMgr.cpp  NetMessageMgr.h
src/lib/net/message/: MessageHead.h
src/lib/net/socket/: socket.h
src/lib/util/: BlockQueue.h  Lock.h  Time.h  Utility.h
src/libserver/: Common_Define.h
src/libserver/CommonLib/: MessageDispatcher.cpp  MessageDispatcher.h  MessageDispatcherMgr.cpp  MessageDispatcherMgr.h  block_queue.h
src/libserver/CommonServer/: CommonServer.cpp  CommonServer.h  IBaseServer.h
src/proto/: msg_cs_common.pb.cc  msg_cs_common.pb.h  msg_id.pb.cc  msg_id.pb.h  msg_ss_common.pb.cc  msg_ss_common.pb.h  proto_out.sh
src/proto/proto_out/: test.pb.cc
src/server/: Common_Define.h
src/server/CommonLib/: RingBuffer.cpp  RingBuffer.h  lock.h
src/server/CommonServer/: CommonServer.cpp  CommonServer.h  CreateServerContext.h  IBaseServer.h
src/server/GateServer/: GateServer.cpp  GateServer.h
src/server/RouteServer/: RouteServer.cpp  RouteServer.h
src/util/: RingBuffer.h  Singleton.h  Time.h  time.h
